// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alpha renders correctly 1`] = `
<div
  className="alpha-picker "
  style={
    {
      "height": "16px",
      "position": "relative",
      "width": "316px",
    }
  }
>
  <div
    style={
      {
        "borderRadius": undefined,
        "inset": "0px",
        "position": "absolute",
      }
    }
  >
    <div
      style={
        {
          "borderRadius": undefined,
          "inset": "0px",
          "overflow": "hidden",
          "position": "absolute",
        }
      }
    >
      <div
        style={
          {
            "background": "url(null) center left",
            "borderRadius": undefined,
            "boxShadow": undefined,
            "inset": "0px",
            "position": "absolute",
          }
        }
      />
    </div>
    <div
      style={
        {
          "background": "linear-gradient(to right, rgba(34,25,77, 0) 0%,
           rgba(34,25,77, 1) 100%)",
          "borderRadius": undefined,
          "boxShadow": undefined,
          "inset": "0px",
          "position": "absolute",
        }
      }
    />
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "height": "100%",
          "margin": "0 3px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          {
            "left": "100%",
            "position": "absolute",
            "top": undefined,
          }
        }
      >
        <div
          style={
            {
              "backgroundColor": "rgb(248, 248, 248)",
              "borderRadius": "50%",
              "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "height": "18px",
              "transform": "translate(-9px, -1px)",
              "width": "18px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Alpha renders vertically 1`] = `
<div
  className="alpha-picker "
  style={
    {
      "height": 200,
      "position": "relative",
      "width": 20,
    }
  }
>
  <div
    style={
      {
        "borderRadius": undefined,
        "inset": "0px",
        "position": "absolute",
      }
    }
  >
    <div
      style={
        {
          "borderRadius": undefined,
          "inset": "0px",
          "overflow": "hidden",
          "position": "absolute",
        }
      }
    >
      <div
        style={
          {
            "background": "url(null) center left",
            "borderRadius": undefined,
            "boxShadow": undefined,
            "inset": "0px",
            "position": "absolute",
          }
        }
      />
    </div>
    <div
      style={
        {
          "background": "linear-gradient(to bottom, rgba(34,25,77, 0) 0%,
            rgba(34,25,77, 1) 100%)",
          "borderRadius": undefined,
          "boxShadow": undefined,
          "inset": "0px",
          "position": "absolute",
        }
      }
    />
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "height": "100%",
          "margin": "0 3px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          {
            "left": 0,
            "position": "absolute",
            "top": "100%",
          }
        }
      >
        <div
          style={
            {
              "backgroundColor": "rgb(248, 248, 248)",
              "borderRadius": "50%",
              "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "height": "18px",
              "transform": "translate(-3px, -9px)",
              "width": "18px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AlphaPointer renders correctly 1`] = `
<div
  style={
    {
      "backgroundColor": "rgb(248, 248, 248)",
      "borderRadius": "50%",
      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "height": "18px",
      "transform": "translate(-9px, -1px)",
      "width": "18px",
    }
  }
/>
`;
